--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
         <strong>discover and keep track of your favourites games</strong>
       </p>
       <a
-        href="https://github.com/your-repository"
+        href="https://github.com/iglnierod/GameArchive/"
         class="btn btn-secondary mx-2"
         >More</a
       >
-      <a href="path/to/your/file.zip" class="btn btn-primary mx-2">Download</a>
+      <a href="LICENSE" class="btn btn-primary mx-2">Download</a>
     </div>
     <footer>
       <div class="footer-content">
