--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <div class="container">
       <h1>GameArchive</h1>
       <p>
-        An open source desktop application to<br>
-        <strong>discover and keep track of your favourites games</strong>
+        An open source desktop application to<br />
+        <strong>discover and keep track of your favourite games</strong>
       </p>
       <a
         href="https://github.com/iglnierod/GameArchive/"
@@ -83,11 +83,68 @@
           Download
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-          <li><a class="dropdown-item" href="#">Windows</a></li>
-          <li><a class="dropdown-item" href="#">Debian/Ubuntu</a></li>
+          <li>
+            <a class="dropdown-item" href="#" onclick="showToast('Windows')"
+              >Windows</a
+            >
+          </li>
+          <li>
+            <a
+              class="dropdown-item"
+              href="#"
+              onclick="showToast('Debian/Ubuntu')"
+              >Debian/Ubuntu</a
+            >
+          </li>
         </ul>
       </div>
     </div>
+
+    <!-- Toasts -->
+    <div
+      class="position-fixed bottom-0 end-0 p-3"
+      style="bottom: 70px; z-index: 11; margin-bottom: 50px;"
+    >
+      <div
+        id="toastWindows"
+        class="toast align-items-center text-white bg-success border-0"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="d-flex">
+          <div class="toast-body">
+            Downloading installer for Windows.
+          </div>
+          <button
+            type="button"
+            class="btn-close btn-close-white me-2 m-auto"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
+        </div>
+      </div>
+      <div
+        id="toastDebian"
+        class="toast align-items-center text-white bg-success border-0"
+        role="alert"
+        aria-live="assertive"
+        aria-atomic="true"
+      >
+        <div class="d-flex">
+          <div class="toast-body">
+            Downloading installer for Debian/Ubuntu.
+          </div>
+          <button
+            type="button"
+            class="btn-close btn-close-white me-2 m-auto"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          ></button>
+        </div>
+      </div>
+    </div>
+
     <footer>
       <div class="footer-content">
         <p>
@@ -111,7 +168,10 @@
             />
           </svg>
         </a>
-        <a href="https://www.linkedin.com/in/rodrigo-iglesias-nieto-982a1a280" target="_blank">
+        <a
+          href="https://www.linkedin.com/in/rodrigo-iglesias-nieto-982a1a280"
+          target="_blank"
+        >
           <svg
             aria-hidden="true"
             xmlns="http://www.w3.org/2000/svg"
@@ -130,5 +190,13 @@
       </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      function showToast(os) {
+        var toastId = os === "Windows" ? "toastWindows" : "toastDebian";
+        var toastElement = document.getElementById(toastId);
+        var toast = new bootstrap.Toast(toastElement);
+        toast.show();
+      }
+    </script>
   </body>
 </html>
