--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
     <style>
       body,
       html {
@@ -85,7 +89,7 @@
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <li>
             <a class="dropdown-item" href="#" onclick="showToast('Windows')"
-              >Windows</a
+              ><i class="bi bi-windows"></i> Windows</a
             >
           </li>
           <li>
@@ -93,7 +97,7 @@
               class="dropdown-item"
               href="#"
               onclick="showToast('Debian/Ubuntu')"
-              >Debian/Ubuntu</a
+              ><i class="bi bi-ubuntu"></i> Debian/Ubuntu</a
             >
           </li>
         </ul>
@@ -103,7 +107,7 @@
     <!-- Toasts -->
     <div
       class="position-fixed bottom-0 end-0 p-3"
-      style="bottom: 70px; z-index: 11; margin-bottom: 50px;"
+      style="bottom: 70px; z-index: 11; margin-bottom: 50px"
     >
       <div
         id="toastWindows"
@@ -114,7 +118,7 @@
       >
         <div class="d-flex">
           <div class="toast-body">
-            Downloading installer for Windows.
+            <i class="bi bi-windows"></i> Downloading installer for Windows.
           </div>
           <button
             type="button"
@@ -133,7 +137,7 @@
       >
         <div class="d-flex">
           <div class="toast-body">
-            Downloading installer for Debian/Ubuntu.
+            <i class="bi bi-ubuntu"></i> Downloading installer for Debian/Ubuntu.
           </div>
           <button
             type="button"
