--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GameArchive</title>
+    <link rel="icon" type="image/png" href="src/main/resources/icon.png" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,8 +28,7 @@
         background-size: cover;
         color: whitesmoke;
       }
-      .container {
-      }
+
       footer {
         position: fixed;
         bottom: 0;
@@ -66,6 +66,12 @@
   </head>
   <body>
     <div class="container">
+      <img
+        src="src/main/resources/icon.png"
+        alt="GameArchive icon"
+        width="100px"
+        height="100px"
+      />
       <h1>GameArchive</h1>
       <p>
         An open source desktop application to<br />
@@ -137,7 +143,8 @@
       >
         <div class="d-flex">
           <div class="toast-body">
-            <i class="bi bi-ubuntu"></i> Downloading installer for Debian/Ubuntu.
+            <i class="bi bi-ubuntu"></i> Downloading installer for
+            Debian/Ubuntu.
           </div>
           <button
             type="button"
