Descargar tar.xz desde web

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <li>
             <a
               class="dropdown-item"
-              href="#"
+              href="installer/linux/GameArchive-1.0-SNAPSHOT.tar.xz"
               onclick="showToast('Debian/Ubuntu')"
               ><i class="bi bi-ubuntu"></i> Debian/Ubuntu</a
             >
