Instalador Windows Actualizado

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
           <li>
-            <a class="dropdown-item" href="#" onclick="showToast('Windows')"
+            <a class="dropdown-item" href="installer/win/GameArchive.zip" onclick="showToast('Windows')"
               ><i class="bi bi-windows"></i> Windows</a
             >
           </li>
